--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
   </head>
   <body>
@@ -19,14 +19,13 @@
 
       <!--Contacts-->
       <div>
-        <a href="mailto:info@devstudio.com" class="contact-link"
-          >info@devstudio.com</a
-        >
+        <a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a>
         <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
       </div>
     </header>
 
     <main>
+
       <!--Section 1-->
       <section>
         <h1>Ефективні рішення для вашого бізнесу</h1>
@@ -34,21 +33,19 @@
       </section>
 
       <!--Section 2-->
-      <div>
+      <section>
         <ul>
           <li>
             <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
             <p>
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
+              Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
             </p>
           </li>
 
           <li>
             <h3>ПУНКТУАЛЬНІСТЬ</h3>
             <p>
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
+              Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
             </p>
           </li>
 
@@ -62,31 +59,24 @@
           <li>
             <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p>
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
+              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
             </p>
           </li>
         </ul>
-      </div>
+    </section>
 
       <!--Section 3-->
       <section>
         <h2>Чим ми займаємося</h2>
         <ul>
           <li>
-            <a href=""
-              ><img src="./images/img1.jpg" width="370" alt="work photo 1"
-            /></a>
+            <a href=""><img src="./images/img1.jpg" width="370" alt="work photo 1"></a>
           </li>
           <li>
-            <a href=""
-              ><img src="./images/img2.jpg" width="370" alt="work photo 2"
-            /></a>
+            <a href=""><img src="./images/img2.jpg" width="370" alt="work photo 2"></a>
           </li>
           <li>
-            <a href=""
-              ><img src="./images/img3.jpg" width="370" alt="work photo 3"
-            /></a>
+            <a href=""><img src="./images/img3.jpg" width="370" alt="work photo 3"></a>
           </li>
         </ul>
       </section>
@@ -97,9 +87,7 @@
         <ul>
           <li>
             <section>
-              <a href=""
-                ><img src="./images/img4.jpg" width="270" alt="team member 1"
-              /></a>
+              <a href=""><img src="./images/img4.jpg" width="270" alt="team member 1"></a>
               <h3>Ігор Дем'яненко</h3>
               <p>Product Designer</p>
             </section>
@@ -107,9 +95,7 @@
 
           <li>
             <section>
-              <a href=""
-                ><img src="./images/img5.jpg" width="270" alt="team member 2"
-              /></a>
+              <a href=""><img src="./images/img5.jpg" width="270" alt="team member 2"></a>
               <h3>Ольга Рєпіна</h3>
               <p>Frontend Developer</p>
             </section>
@@ -117,9 +103,7 @@
 
           <li>
             <section>
-              <a href=""
-                ><img src="./images/img6.jpg" width="270" alt="team member 3"
-              /></a>
+              <a href=""><img src="./images/img6.jpg" width="270" alt="team member 3"></a>
               <h3>Микола Тарасов</h3>
               <p>Marketing</p>
             </section>
@@ -127,9 +111,7 @@
 
           <li>
             <section>
-              <a href=""
-                ><img src="./images/img7.jpg" width="270" alt="team member 4"
-              /></a>
+              <a href=""><img src="./images/img7.jpg" width="270" alt="team member 4"></a>
               <h3>Михайло Єрмаков</h3>
               <p>UI Designer</p>
             </section>
@@ -142,15 +124,10 @@
       <a href="">Web<span>Studio</span></a>
       <address>
         <p>
-          <a
-            href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-            >м. Київ, пр-т Лесі Українки, 26</a
-          >
+          <a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">м. Київ, пр-т Лесі Українки, 26</a>
         </p>
         <p>
-          <a href="mailto:info@devstudio.com" class="contact-link"
-            >info@devstudio.com</a
-          >
+          <a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a>
         </p>
         <p>
           <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
