--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,10 +18,14 @@
       </nav>
 
       <!--Contacts-->
-      <div>
-        <a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a>
-        <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
-      </div>
+      <ul>
+        <li>
+          <a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a>
+        </li>
+        <li>
+          <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
+        </li>
+      </ul>
     </header>
 
     <main>
@@ -70,13 +74,13 @@
         <h2>Чим ми займаємося</h2>
         <ul>
           <li>
-            <a href=""><img src="./images/img1.jpg" width="370" alt="work photo 1"></a>
+            <img src="./images/img1.jpg" width="370" alt="work photo 1">
           </li>
           <li>
-            <a href=""><img src="./images/img2.jpg" width="370" alt="work photo 2"></a>
+            <img src="./images/img2.jpg" width="370" alt="work photo 2">
           </li>
           <li>
-            <a href=""><img src="./images/img3.jpg" width="370" alt="work photo 3"></a>
+            <img src="./images/img3.jpg" width="370" alt="work photo 3">
           </li>
         </ul>
       </section>
@@ -86,35 +90,27 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <section>
-              <a href=""><img src="./images/img4.jpg" width="270" alt="team member 1"></a>
+              <img src="./images/img4.jpg" width="270" alt="team member 1">
               <h3>Ігор Дем'яненко</h3>
               <p>Product Designer</p>
-            </section>
           </li>
 
           <li>
-            <section>
-              <a href=""><img src="./images/img5.jpg" width="270" alt="team member 2"></a>
+              <img src="./images/img5.jpg" width="270" alt="team member 2">
               <h3>Ольга Рєпіна</h3>
               <p>Frontend Developer</p>
-            </section>
           </li>
 
           <li>
-            <section>
-              <a href=""><img src="./images/img6.jpg" width="270" alt="team member 3"></a>
+              <img src="./images/img6.jpg" width="270" alt="team member 3">
               <h3>Микола Тарасов</h3>
               <p>Marketing</p>
-            </section>
           </li>
 
           <li>
-            <section>
-              <a href=""><img src="./images/img7.jpg" width="270" alt="team member 4"></a>
+              <img src="./images/img7.jpg" width="270" alt="team member 4">
               <h3>Михайло Єрмаков</h3>
               <p>UI Designer</p>
-            </section>
           </li>
         </ul>
       </section>
@@ -123,15 +119,17 @@
     <footer>
       <a href="">Web<span>Studio</span></a>
       <address>
-        <p>
-          <a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">м. Київ, пр-т Лесі Українки, 26</a>
-        </p>
-        <p>
-          <a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a>
-        </p>
-        <p>
-          <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
-        </p>
+        <ul>
+          <li>
+            <a href="https://goo.gl/maps/rPGG4V1VkysSoRD67" target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a>
+          </li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
+          </li>
+        </ul>
       </address>
     </footer>
   </body>
